<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".LoginActivity">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/rel_top">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_text"
                android:textColor="#FFF"
                android:textSize="22sp"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6E6E6"
            android:orientation="vertical"
            android:padding="20dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/image_shape"
                android:contentDescription="@string/image"
                android:src="@drawable/contacts"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/relative_back"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_text"
                        android:textColor="#C3C3C3"
                        android:textSize="18sp"/>

                <EditText
                        android:id="@+id/Uname_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/user_hint"
                        android:text="@string/user_edit"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwd_text"
                        android:textColor="#C3C3C3"
                        android:textSize="18sp"/>

                <EditText
                        android:id="@+id/pwd_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/pwd_hint"
                        android:inputType="numberPassword"
                        android:text="@string/pwd_edit"/>
            </LinearLayout>
        </LinearLayout>

        <Button
                android:id="@+id/Ok_Btn"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/log_btn_select"
                android:text="@string/ok_btn"
                android:textColor="#FFF"
                android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>